bitsandbytes/bnb/tests/ui/bin_codec_needs_variable.stderr
error[E0277]: the trait bound `Varint: FixedBitLen` is not satisfied
  --> tests/ui/bin_codec_needs_variable.rs:14:13
   |
14 |     length: Varint, // ← missing #[brw(variable)]
   |             ^^^^^^ unsatisfied trait bound
   |
help: the trait `FixedBitLen` is not implemented for `Varint`
  --> tests/ui/bin_codec_needs_variable.rs:8:1
   |
 8 | struct Varint(u64);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FixedBitLen`:
             Frame
             UInt<T, N>
             bool
             u128
             u16
             u32
             u64
             u8
